# adaptive-scale-fusion-urban-segmentation

./: .gitignore  PROJECT_SUMMARY.md  README.md  SETUP_VERIFICATION.md  VALIDATION_REPORT.md  VERIFICATION_REPORT.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
results/: results.json
scripts/: evaluate.py  predict.py  train.py
src/adaptive_scale_fusion_urban_segmentation/: __init__.py
src/adaptive_scale_fusion_urban_segmentation/evaluation/: __init__.py  analysis.py  metrics.py
src/adaptive_scale_fusion_urban_segmentation/training/: __init__.py  trainer.py
src/adaptive_scale_fusion_urban_segmentation/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
